--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mi primer ejemplo API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
   "author": "Acosta",
   "license": "ISC",
@@ -12,8 +12,6 @@
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
-    "oracledb": "^5.3.0",
-    "sqlite3": "^5.0.2"
+    "mysql": "^2.18.1"
   }
 }
